Enhance sourcing, filtering, and scheduling

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ OLLAMA_MODEL=llama3.1:8b
 OLLAMA_ENDPOINT=http://localhost:11434
 
 # Locale hints
-DEFAULT_CITY=תל אביב
+DEFAULT_CITY=Tel Aviv
 DEFAULT_LOCALE=IL
 
 # OpenRouter (free-tier capable)
